chore: upgrade and clean up packages

--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ AUTH_GITHUB_SECRET=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5555/prompt-mcp-app"
+DATABASE_URL="postgresql://postgres:password@localhost:5555/my-app"
 
 # Resend
 RESEND_API_KEY=""
-EMAIL_FROM="onboarding@example.com" # Replace with your verified Resend domain email
+EMAIL_FROM="company@resend.dev" # Replace with your verified Resend domain email
 
 # NextAuth URL
 # For production, this should be your deployed application's URL (e.g., https://your-app.com)
